# VASE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: VASE.cpp  VASE.h  fft.cpp  fft.h  fft_convolver.cpp  fft_convolver.h  hrtf_decoder.cpp  hrtf_decoder.h  main.cpp  rotation.cpp  rotation.h  sh_encoder.cpp  sh_encoder.h
tools/: gen_hrtf_header.py
